- fix headings and date classes - fix gallery page spacing - fix show's width

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -54,10 +54,12 @@ nav.pagination {
   clear: both;
 }
 
-div.gallery-row {
-  text-align: center;
-  padding: 3px;
+div.gallery {
+  margin-top: 35px;
+  margin-bottom: 40px;
 }
+
+div.gallery-row { padding: 3px; }
 
 div.error {
 
